--- a/mailing.html
+++ b/mailing.html
@@ -17,7 +17,7 @@
 						<table cellpadding="0" cellspacing="0" border="0" align="center" style="margin:0 auto; width:560px;border-collapse:collapse;text-align:center;line-height:26px">
 							<tr>
 								<td valign="top" style="background-color:#fff;border-bottom:1px solid #eeeeee;padding-bottom:20px;">
-									<img src="https://czy4.org/OS150724/logo.png" alt="⛵ Old Spice" style="width:320px;font-size:40px;color:#af1e23;"><br><br>
+									<a href="https://www.everydayme.pl/marki/old-spice" style="border:0;outline:0;"><img src="https://czy4.org/OS150724/logo.png" alt="⛵ Old Spice" style="width:320px;font-size:40px;color:#af1e23;"></a><br><br>
 									<span style="font-size:45px;font-weight:bold;line-height:100%">Twoje nagranie <span style="color:#af1e23">pełne świeżych beatów</span> czeka na&nbsp;Ciebie!</span><br><br>
 									<strong style="font-weight:bold;color:#af1e23">Hej! Mamy dobrą wiadomość:</strong><br>
 									Swój gorący mix znajdziesz załączniku tego e-maila 😊  <br><br>
