--- a/mailing.html
+++ b/mailing.html
@@ -6,7 +6,7 @@
 	<title>Old Spice - Twoje nagranie czeka na Ciebie</title>
 </head>
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" bgcolor="#af1e23" align="center" style="width: 100% !important; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; margin: 0; padding: 0;font-family:Arial,Helvetica,sans-serif;font-size:18px;background-color:#af1e23;color:#58595a">
-<div style="font-size:0px;line-height:1px;mso-line-height-rule:exactly;display:none;max-width:0px;max-height:0px;opacity:0;overflow:hidden;mso-hide:all;">Twoje nagranie pełne świeżych beatów czeka na Ciebie</div>
+<div style="font-size:0px;line-height:1px;mso-line-height-rule:exactly;display:none;max-width:0px;max-height:0px;opacity:0;overflow:hidden;mso-hide:all;">Twoje nagranie pełne świeżych beatów czeka na Ciebie / Your SPICY-y mix is ready!</div>
 
 <table cellpadding="0" cellspacing="0" border="0" bgcolor="#562378" align="center" style="margin:0 auto; padding:0; width:100% !important; line-height: 100% !important;background-color:#af1e23;border-collapse:collapse;">
 		<tr>
